@@ -1136,6 +1136,7 @@ nuttx-0.3.17 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  was unnecessarily large.
 	* Added LPC214x SPI1 driver to interface with MMC on mcu123.com board.
 	* Added a simple SPI-based MMC/SD block driver
+	* NSH: Add LPC214x-specific support to NSH; NSH now mounts any SD cards in the slot.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
