@@ -201,7 +201,7 @@ CONFIG_DISABLE_POSIX_TIMERS=n
 CONFIG_DISABLE_PTHREAD=n
 CONFIG_DISABLE_SIGNALS=n
 CONFIG_DISABLE_MQUEUE=n
-CONFIG_DISABLE_MOUNTPOINT=y
+CONFIG_DISABLE_MOUNTPOINT=n
 CONFIG_DISABLE_ENVIRON=n
 
 #
@@ -279,6 +279,19 @@ CONFIG_MQ_MAXMSGSIZE=32
 CONFIG_MAX_WDOGPARMS=2
 CONFIG_PREALLOC_WDOGS=4
 CONFIG_PREALLOC_TIMERS=4
+
+#
+# FAT filesystem configuration
+# CONFIG_FS_FAT - Enable FAT filesystem support
+# CONFIG_FAT_SECTORSIZE - Max supported sector size
+# CONFIG_FS_ROMFS - Enable ROMFS filesystem support
+CONFIG_FS_FAT=y
+CONFIG_FS_ROMFS=n
+
+#
+# MMC/SD configuration
+CONFIG_MMCSD_NSLOTS=1
+CONFIG_MMCSD_READONLY=n
 
 #
 # TCP/IP and UDP support via uIP
@@ -483,6 +496,12 @@ CONFIG_EXAMPLES_NSH_FATDEVNO=1
 CONFIG_EXAMPLES_NSH_FATSECTSIZE=512
 CONFIG_EXAMPLES_NSH_FATNSECTORS=1024
 CONFIG_EXAMPLES_NSH_FATMOUNTPT=/tmp
+
+#
+# Architecture-specific NSH options
+CONFIG_EXAMPLES_NSH_MMCSDSPIPORTNO=1
+CONFIG_EXAMPLES_NSH_MMCSDSLOTNO=0
+CONFIG_EXAMPLES_NSH_MMCSDMINOR=0
 
 #
 # Stack and heap information
